[workspace]
members = [
  "chapter_1/arc",
  "chapter_1/cell", "chapter_1/condvar",
  "chapter_1/i32",
  "chapter_1/mutex", "chapter_1/parking_threads", "chapter_1/phantom_data", "chapter_1/raw_ptrs",
  "chapter_1/refcell",
  "chapter_1/reference_counter",
  "chapter_1/rwlock",
  "chapter_1/scoped_threads",
  "chapter_1/static_fields",
  "chapter_1/thread_id", "misc/holding_mutex",
]
resolver = "3"
