[workspace]
members = [
  "chapter_1/arc",
  "chapter_1/cell", "chapter_1/condvar",
  "chapter_1/i32",
  "chapter_1/mutex", "chapter_1/parking_threads", "chapter_1/phantom_data", "chapter_1/raw_ptrs",
  "chapter_1/refcell",
  "chapter_1/reference_counter",
  "chapter_1/rwlock",
  "chapter_1/scoped_threads",
  "chapter_1/static_fields",
  "chapter_1/thread_id", "chapter_2/atomics", "chapter_2/cas_id_allocation", "chapter_2/lazy_initialization", "chapter_2/lazy_key_init", "chapter_2/once", "chapter_2/once_lock", "chapter_2/panicking_allocation_new_id", "chapter_2/report_progress", "chapter_3/happens_before_spawn_join", "chapter_3/relaxed_guarantees_total_modification_order", "misc/holding_mutex", "misc/while_let_range",
]
resolver = "3"
